--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
     <header>
       <div class="container">
         <div class="nav_left">
+          <ul>
+            <li>ciao</li>
+            <li>ciao</li>
+            <li>ciao</li>
+            <li>ciao</li>
+            <li>ciao</li>
+          </ul>
 
         </div>
         <div class="nav_right">
+          <ul>
+            <li>diventa un tutor</li>
+            <li><button type="button" name="button">bottone</button></li>
+            <li><button type="button" name="button">bottone</button></li>
+
+          </ul>
 
         </div>
         <h1>Scegli l'inglese studiato per i professionisti</h1>
@@ -25,20 +38,67 @@
 
     <section class="scuole">
       <div class="container tb">
-        <h1>CIAO COME STAI</h1>
-        <p>CIAO CIAO CIAO CIAO CIAO CIAO</p>
+        <h1 class="center">Le scuole di lingua tradizionali non sono efficaci</h1>
+        <p class="center">Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</p>
       </div>
     </section>
+
+    <!-- COLONNE  -->
 
     <section class="trecol">
       <div class="container">
-        <div class="colonna"></div>
-        <div class="colonna2"></div>
-        <div class="colonna3"></div>
+        <div class="colonna">
+          <div class="logocol">
+            <!-- <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/profile.svg?v12" alt=""> -->
+
+          </div>
+
+          <h2 class="center">Piano formativo configurato sul proprio livello</h2>
+          <hr>
+          <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+        </div>
+        <div class="colonna2">
+          <div class="logocol">
+            <!-- <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/profile.svg?v12" alt=""> -->
+
+          </div>
+          <h2 class="center">Piano formativo configurato sul proprio livello</h2>
+          <hr>
+          <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+
+
+
+        </div>
+        <div class="colonna3">
+
+          <div class="logocol">
+            <!-- <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/profile.svg?v12" alt=""> -->
+
+          </div>
+          <h2 class="center">Piano formativo configurato sul proprio livello</h2>
+          <hr>
+          <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+
+        </div>
 
       </div>
 
     </section>
+
+    <div class="piano">
+      <div class="container">
+        <div class="cleft">
+
+        </div>
+        <div class="cright">
+          <h1>Scopri il tuo livello iniziale e struttura un piano personalizzato</h1>
+          <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+
+        </div>
+
+      </div>
+
+    </div>
 
     <footer>
 
