div piano, one,realenglish

--- a/index.html
+++ b/index.html
@@ -87,14 +87,56 @@
 
     <div class="piano">
       <div class="container">
-        <div class="cleft">
+        <div class="blocco1">
 
         </div>
-        <div class="cright">
+        <div class="blocco2">
           <h1>Scopri il tuo livello iniziale e struttura un piano personalizzato</h1>
           <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
 
         </div>
+
+      </div>
+
+    </div>
+
+
+    <!-- One To One -->
+
+
+    <div class="one">
+      <div class="container">
+        <div class="blocco2">
+          <h1>Le nostre lezioni one to one</h1>
+          <p>Sessioni online one to one in tempo reale della durata di 30 minuti ciascuna con tutor madrelingua inglese selezionati.
+
+            Tutto si svolge comodamente via webcam direttamente dalla nostra piattaforma</p>
+
+        </div>
+        <div class="blocco1">
+
+        </div>
+
+
+      </div>
+
+    </div>
+
+
+
+    <div class="realenglish">
+      <div class="container">
+
+        <div class="blocco1">
+
+        </div>
+
+        <div class="blocco2">
+          <h1>Solo l’inglese che ti serve davvero</h1>
+          <p>Molto più di semplici conversazioni, le sessioni coni nostri tutor ricreano le più diverse situazioni professionali.</p>
+
+        </div>
+
 
       </div>
 
