--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     </div>
 
 
+    <!-- Realenglish  -->
 
     <div class="realenglish">
       <div class="container">
@@ -137,6 +138,15 @@
 
         </div>
 
+
+      </div>
+
+    </div>
+
+    <!--tablet  -->
+
+    <div class="tablet">
+      <div class="container_tablet">
 
       </div>
 
